<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FF45"

    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textDirection="firstStrongRtl"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:textColorHint="#795548"
            android:textSize="15sp" />

        <EditText


            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/mobilenumber" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"


            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/NumOfPeople"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/qtypeople" />

        <EditText
            android:id="@+id/total_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"


            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/table_smoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smokingtable" />

            <RadioButton
                android:id="@+id/notable_smoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nonsmokingtable" />

        </RadioGroup>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:calendarViewShown="false"
                android:timePickerMode="spinner" />


            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <Button
                android:id="@+id/btnreset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_reset"
                app:backgroundTint="#D52DE8"
                app:iconTint="#050505" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book"
                app:backgroundTint="#D037EA" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>